--- a/index.html
+++ b/index.html
@@ -172,6 +172,40 @@
       </div>
 
   </section>
+  <!-- News & Event section start here -->
+  <section class="my-24">
+    <h2 class="text-5xl font-extrabold mb-5 text-center">News & Events</h2>
+    <p class="lg:max-w-3xl text-center pl-4 mx-auto mb-10">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+    <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+      <div class="card card-compact p-5 rounded-xl border border-1 border-[#D2D2D2]">
+        <figure><img src="./images/news-1.png" alt="" /></figure>
+        <div class="card-body lg:mx-12">
+          <h4>Feb 05, 2027</h4>
+          <h2 class="card-title text-xl font-extrabold">Collecting 8 points for discount</h2>
+          <p>There are many variations of passages of Lorem Ipsum available.</p>
+          <h4 class="font-bold text-black">Learn More</h4>
+        </div>
+        </div>
+      <div class="card card-compact p-5 rounded-xl border border-1 border-[#D2D2D2]">
+        <figure><img src="./images/news-2.png" alt="" /></figure>
+        <div class="card-body lg:mx-12">
+          <h4>Feb 05, 2027</h4>
+          <h2 class="card-title text-xl font-extrabold">Collecting 8 points for discount</h2>
+          <p>There are many variations of passages of Lorem Ipsum available.</p>
+          <h4 class="font-bold text-black">Learn More</h4>
+        </div>
+      </div>  
+      <div class="card card-compact p-5 rounded-xl border border-1 border-[#D2D2D2]">
+        <figure><img src="./images/news-3.png" alt="" /></figure>
+        <div class="card-body lg:mx-12">
+          <h4>Feb 05, 2027</h4>
+          <h2 class="card-title text-xl font-extrabold">Collecting 8 points for discount</h2>
+          <p>There are many variations of passages of Lorem Ipsum available.</p>
+          <h4 class="font-bold text-black">Learn More</h4>
+        </div>
+      </div>
+    </div>
+  </section>
   </main>
 </body>
 </html>
