--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
           theme: {
             extend: {
               colors: {
-                clifford: '#da373d',
+                'gradient-start': '#FF8938',
+                'gradient-end': '#F00',
               }
             }
           }
@@ -40,16 +41,16 @@
 <body class="font-manrope">
   <!-- Header section start here -->
   <header class="container mx-auto">
-    <div class="hero">
-      <div class="hero-content flex-col lg:flex-row">
+    <div class="my-20">
+      <div class="flex items-center justify-between flex-col lg:flex-row">
         <div class="px-10">
           <h1 class=" text-5xl lg:text-7xl font-extrabold">It's good<br> 
             tea time at The<br> Tea House</h1>
           <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
-          <button class="btn btn-primary">Explore More</button>
+          <button class="btn text-white bg-gradient-to-r from-gradient-start to-gradient-end">Explore More <i class="fa-solid fa-arrow-right"></i></button>
         </div>
         <div>
-          <img src="./images/banner.png" class="max-w-sm" />
+          <img src="./images/banner.png" class="max-w-[260px] lg:max-w-[450px]" />
           <!-- Rating badge -->
           <div class=" -mt-16 flex items-center drop-shadow-lg bg-white p-5 w-60">
             <i class="fa-solid fa-star text-3xl text-amber-400"></i>
@@ -128,13 +129,13 @@
     </div>
   </section>
   <!-- Super client section start here -->
-  <section class="my-24 flex flex-col lg:flex-row gap-12 rounded-xl bg-gradient-to-r from-[#FF8938] to-[#F00] px-16 py-24">
+  <section class="my-24 flex flex-col lg:flex-row gap-12 rounded-xl bg-gradient-to-r from-gradient-start to-gradient-end px-16 py-24">
     <div class="flex lg:pr-28 items-center">
       <div class="space-y-5">
         <h2 class="text-5xl font-extrabold text-white">Meet Our Super<br>
           Clients</h2>
           <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-          <button class="btn btn-primary">Show All</button>
+          <button class="btn text-xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-gradient-start to-gradient-end">Show All</button>
       </div>
       </div>
       <!-- Review container -->
@@ -207,5 +208,52 @@
     </div>
   </section>
   </main>
+  <footer class="px-4 lg:px-48 py-10 bg-purple-100 text-base-content">
+    <div class="flex flex-col lg:flex-row justify-between pl-8 lg:pl-0 my-24">
+      <img class="w-10 " src="./images/cup.png" alt="">
+      <p>
+        <span>Ready to get strated?</span>
+        <button class="btn text-white ml-10 bg-gradient-to-r from-gradient-start to-gradient-end">Get Started</button>
+      </p>
+    </div>
+    <div class="footer pl-10 lg:pl-0">
+      <nav>
+        <h6 class="text-xl font-semibold text-black">Quick Links</h6> 
+        <a class="link link-hover">Home</a>
+        <a class="link link-hover">About Us</a>
+        <a class="link link-hover">Insurance</a>
+        <a class="link link-hover">Privacy Policy</a>
+      </nav> 
+      <nav>
+        <h6 class="text-xl font-semibold text-black">Our Service</h6> 
+        <a class="link link-hover">Life Insurance</a>
+        <a class="link link-hover">Car Insurance</a>
+        <a class="link link-hover">Health Insurance</a>
+        <a class="link link-hover">House Insurance</a>
+      </nav> 
+      <nav>
+        <h6 class="text-xl font-semibold text-black">Help</h6> 
+        <a class="link link-hover">FAQs</a>
+        <a class="link link-hover">Contact Us</a>
+      </nav> 
+      <form>
+        <h6 class=" text-2xl font-semibold text-black mb-6">Subscribe to our<br> newsletter</h6> 
+        <fieldset class="form-control w-80"> 
+          <div class="join">
+            <input type="text" placeholder="Email address" class="py-4 bg-transparent border-b-2 border-black outline-none" /> 
+            <button class="btn text-white bg-gradient-to-r from-gradient-start to-gradient-end rounded-full"><i class="fa-solid fa-arrow-right"></i></button>
+          </div>
+          <div class="mt-8 text-xl">
+            <i class="fa-brands fa-facebook mr-5"></i>
+          <i class="fa-brands fa-twitter mr-5"></i>
+          <i class="fa-brands fa-square-instagram"></i>
+          </div>
+        </fieldset>
+      </form>
+    </div>
+    <div class="mt-10 text-center">
+      <p>Copyright © 2024 - All right reserved by ACME Industries Ltd</p>
+    </div>
+  </footer>
 </body>
 </html>
